Add Karate Class document generation feature and improve UI layout

--- a/data/themes/dark_solarized.qss
+++ b/data/themes/dark_solarized.qss
@@ -70,6 +70,9 @@ QComboBox {
     border: 1px solid #586e75;
     color: #839496;
 }
+QComboBox#workout_selector{
+    font-size: 12px;
+}
 
 QComboBox QAbstractItemView {
     background-color: #002b36;
