--- a/data/themes/dark_solarized.qss
+++ b/data/themes/dark_solarized.qss
@@ -69,6 +69,7 @@ QComboBox {
     background-color: #073642;
     border: 1px solid #586e75;
     color: #839496;
+    text-align: center;
 }
 QComboBox#workout_selector{
     font-size: 12px;
